--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -19,7 +19,7 @@
     </li>
 
     <li class="bold">
-      <a href="/" class="waves-effect waves-cyan">
+      <a href="/notificacaos/home" class="waves-effect waves-cyan">
         <i class="fa fa-home"></i> Início
       </a>
     </li>
@@ -54,14 +54,24 @@
       </a>
     </li>
     <li class="bold">
+      <a href="/categoria_queixas" class="waves-effect waves-cyan">
+        <i class="fa fa-list"></i> Categoria Queixas
+      </a>
+    </li>
+    <li class="bold">
       <a href="/monofilamentos" class="waves-effect waves-cyan">
         <i class="fa fa-list"></i> Monofilamentos
+      </a>
+    </li>
+    <li class="bold">
+      <a href="/cidades" class="waves-effect waves-cyan">
+        <i class="fa fa-map-marker"></i> Cidades
       </a>
     </li>
 
     <li class="bold">
       <a href="/users" class="waves-effect waves-cyan">
-        <i class="fa fa-list"></i> Usuários
+        <i class="fa fa-users"></i> Usuários
       </a>
     </li>
     <%# end %>
