--- a/app/views/pacientes/mapa.html.erb
+++ b/app/views/pacientes/mapa.html.erb
@@ -1,14 +1,34 @@
-
+<div class="row">
+  <div class="input">
+    <label for="cidade">Cidade</label>
+    <%= select_tag :cidade, options_from_collection_for_select(@cidades,:id,:nome),{include_blank:true, class:"browser-default select2" }%>
+  </div>
+</div>
+<br>
 <div class="row">
   <div id="map" style="width: 100%;height: 500px"></div>
 </div>
 <script>
 
+  var cidades;
+  var cidade_selecionada;
+  $(document).ready(function()
+  {
+      cidades = <%= @cidades.map{|a| {id: a.id,nome: a.nome, location:{lat: a.latitude.gsub!(',','.').to_f, lng: a.longitude.gsub!(',','.').to_f} }}.to_json.to_s.html_safe  %>;
+     $("#cidade").on('change',function()
+     {
+         var id = $(this).val();
+         cidade_selecionada = $.grep(cidades, function(e){ return e.id == id; });
+         console.log(cidade_selecionada);
+         initMap();
+     });
+  });
+
     function initMap() {
 
         var map = new google.maps.Map(document.getElementById('map'), {
             zoom: 12,
-            center: {lat: -10.184447, lng: -48.333679}
+            center: {lat: cidade_selecionada[0].location.lat, lng: cidade_selecionada[0].location.lng}
         });
 
         // Create an array of alphabetical characters used to label the markers.
@@ -57,5 +77,5 @@
 <script src="/js/markerclusterer.js">
 </script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWFnF5py8BuNUpvpcvuAVZQxJAm36NTA8&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWFnF5py8BuNUpvpcvuAVZQxJAm36NTA8">//&callback=initMap
 </script>
