--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -8,13 +8,13 @@
           <li class="">
             <div class="logo-wrapper">
               <a href="/" class="brand-logo darken-1">
-                <img src="/logo_boamassa.png" alt="" width="auto">
+                <img src="" alt="" width="auto">
               </a>
             </div>
           </li>
         </ul>
         <div class="header-search-wrapper hide-on-med-and-down">
-          Sistema de Gestão da Cantina Boamassa
+          Sistema de Gestão
         </div>
         <ul class="right hide-on-med-and-down no-print">
           <%= yield :icon_top  %>
