--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -259,8 +259,8 @@
 <footer class="page-footer teal darken-4">
   <div class="footer-copyright">
     <div class="container center">
-      Copyright © <%= Date.today.year %> | <a class="white-text" href="/" target="_blank">Cantina Boamassa</a> desenvolvido por
-      <a class="white-text" href="http://novostek.com" target="_blank">Novostek LLC</a>
+      Copyright © <%= Date.today.year %>
+
     </div>
   </div>
 </footer>
