--- a/app/views/avaliacao_notificacaos/_avaliacao_sensitiva.html.erb
+++ b/app/views/avaliacao_notificacaos/_avaliacao_sensitiva.html.erb
@@ -8,7 +8,7 @@
   <tbody>
   <% avaliacao_sensitivas.each do |avaliacao_sensitiva| %>
       <tr>
-        <td><%= link_to avaliacao_sensitiva.data,edit_avaliacao_sensitiva_path(avaliacao_sensitiva) %></td>
+        <td><%= link_to avaliacao_sensitiva.data,edit_avaliacao_sensitiva_path(avaliacao_sensitiva), target:"_self" %></td>
       </tr>
   <% end %>
   </tbody>
